# kedro_sql_poc

./: README.md  ddb.db  pyproject.toml
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_processing.yml  reporting.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/kbt/: __init__.py  __main__.py  settings.py
src/kbt/pipelines/data_processing/: pipeline.py
src/kbt/sql/: engine_reviews_report.sql  preprocessed_companies.sql  preprocessed_reviews.sql  preprocessed_shuttles.sql  shuttle_ratings.sql
src/tests/: test_run.py
